# neural-spd-inversion

./: config.py  environment.yml  pyproject.toml  requirements.txt  train_peclet_model.py
analysis/: overall_performance.csv
lib/landlab_torch_tools/: README.md  promp_plan.md  pyproject.toml  test_augmentations.py  test_threshold_dataset.py
lib/landlab_torch_tools/src/landlab_torch_tools/: LandlabBatchDataset.py  __init__.py  shuffling_augmentations.py  threshold_dataset.py
notebooks/jupyter/: analysis.ipynb  colab_setup.ipynb  dataprep.ipynb  drainage_density-checkpoint.ipynb  drainage_density.ipynb  evaluation.ipynb  performance_baseline.ipynb  raw_performance.ipynb  sine_landscapes-checkpoint.ipynb  sine_landscapes.ipynb  training.ipynb
notebooks/org/: analysis.org  colab_setup.org  dataprep.org  drainage_density.org  evaluation.org  sine_landscapes.org  training.org
notebooks/org/plots/: ThreeLayerCNNRegressor.py  Untitled.ipynb  performance_baseline.org  plot_style_seaborn.py  poster_style.py  raw_performance.org
